Make scroll container

--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-
+#scroller {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #001122;
+    scroll-snap-type: mandatory;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
