--- a/style.css
+++ b/style.css
@@ -11,3 +11,16 @@
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
+.section {
+    width: 100vw;
+    height: 100vw;
+    scroll-snap-align: start;
+}
+
+.centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: relative;
+}
