Add About section

--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
     width: 100vw;
     height: 100vw;
     scroll-snap-align: start;
+    
+    padding: 36px;
+    box-sizing: border-box;
 }
 
 .centered {
