--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@
     transform: translate(-50%, -50%);
     position: relative;
 }
+
+p {
+    font-family: Roboto, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Gemunu Libre', sans-serif;
+}
