--- a/style.css
+++ b/style.css
@@ -35,3 +35,19 @@ p {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Gemunu Libre', sans-serif;
 }
+
+button {
+    padding: 10px 16px;
+    border: 2px solid #0088FF;
+    font-family: Roboto, Arial, sans-serif;
+    color: #0088FF;
+    background-color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.21s, color 0.21s;
+}
+
+button:hover {
+    background-color: #0088FF;
+    color: white;
+}
