--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ button:hover {
     width: 100vw;
     text-align: center;
     padding: 10px;
+    text-shadow: 0 0 12px white;
 }
 
 #navbar a {
@@ -67,4 +68,9 @@ button:hover {
     padding-left: 5px;
     padding-right: 5px;
     font-family: 'Gemunu Libre', sans-serif;
+    transition: opacity 0.42s;
+}
+
+#navbar a:hover {
+    opacity: 0.69;
 }
