--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
     
     padding: 100.001px;
     box-sizing: border-box;
+    background-size: cover;
+    background-position: center;
 }
 
 .centered {
